# standardfunctions

./: README.md  setup.cfg  setup.py
src/standardfunctions/: fit.py  get.py  modify.py  plot.py
