[metadata]
name = standardfunctions
version = 1.0.0
author = Yannik Brune
author_email = yannik.brune@tu-dortmund.de
description = Package of Useful Function for the work with Data in .csv .spe and .img format
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Gamer317/standardfunctions
project_urls =
    Bug Tracker = https://github.com/Gamer317/standardfunctions/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU GPLv3 
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires = ['scipy',
                    'numpy',
                    'uncertainties',
                    'cv2',
                    'os',
                    're',
                    'pandas',
                    'spe_loader',
                    'copy',
                    'networkx',
                    'operator',
                    'toolz',
                    'pickle',
                    'matplotlib'
]

[options.packages.find]
where = src